samples/_failures_safe/1761556737_418419_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2e6e60a0.c: In function ‘main’:
./samples/SAFE/__tmp_2e6e60a0.c:168:30: error: missing terminating " character
  168 |         case STATE_C: printf("
      |                              ^
./samples/SAFE/__tmp_2e6e60a0.c:168:9: error: expected expression at end of input
  168 |         case STATE_C: printf("
      |         ^~~~
./samples/SAFE/__tmp_2e6e60a0.c:168:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2e6e60a0.c:168:9: error: expected declaration or statement at end of input
